--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,9 @@ $color-dark-grey: #777777;
 $color-white: #ffffff;
 $color-black: #000000;
 
+// FONT SIZE
+$default-font-size: 1.6rem;
+
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
