--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,7 +8,7 @@
     border-radius: 10rem;
     transition: all .2s;
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
 
     &:hover {
       transform: translateY(-3px);
@@ -51,5 +51,31 @@
       animation: moveInBottom .5s ease-out .75s;
       animation-fill-mode: backwards;
     }
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-dark-blue;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: 700;
+    border-bottom: 1px solid $color-dark-blue;
+    padding: 3px;
+    transition: all .2s;
+  }
+
+  &:hover {
+    background-color: $color-dark-blue;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, .15);
+    transition: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    transition: translateY(0);
   }
 }
