--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,3 +4,19 @@
   margin-top: -20vh;
 }
 
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba($color-light-blue, 0.8), 
+    rgba($color-dark-blue, 0.8)), 
+  url(../../img/nord-4.jpg);
+  background-size: cover;
+  background-position: center;
+  transform: skewY(-7deg);
+  margin-top: -11rem;
+
+  & > * {
+    transform: skewY(7deg);
+  }
+}
