--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,11 @@
 $color-light-blue: #8dcaff;
 $color-dark-blue: #4c96d7;
+$color-blue-accent-1: #82b1ff;
+$color-blue-accent-4: #2962ff;
+$color-deep-purple-accent-1: #b39ddb;
+$color-deep-purple-accent-4: #6200ea;
+$color-blue-darken-1: #9fa8da;
+$color-blue-darken-4: #0d47a1;
 $color-light-grey: #f7f7f7;
 $color-dark-grey: #777777;
 $color-white: #ffffff;
