--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -20,3 +20,9 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  background-color: $color-light-grey;
+  padding: 25rem 0 50rem 0;
+  margin-top: -11rem;
+}
