Front part of each card styles are ready

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,7 +10,7 @@
     to right bottom,
     rgba($color-light-blue, 0.8), 
     rgba($color-dark-blue, 0.8)), 
-  url(../../img/nord-4.jpg);
+  url(../img/nord-4.jpg);
   background-size: cover;
   background-position: center;
   transform: skewY(-7deg);
