--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,10 +2,10 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 52rem;
+  height: 57rem;
 
   &__side {
-    height: 52rem;
+    height: 57rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
@@ -53,6 +53,8 @@
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     &--1 {
       background-image: linear-gradient(to right bottom, $color-blue-accent-1, $color-blue-accent-4),
@@ -91,6 +93,19 @@
         rgba($color-blue-accent-1, .85), 
         rgba($color-blue-accent-4, .85));
     }
+
+    &--2 {
+      background-image: linear-gradient(to right bottom,
+        rgba($color-deep-purple-accent-1, .85), 
+        rgba($color-deep-purple-accent-4, .85));
+    }
+
+    &--3 {
+      background-image: linear-gradient(to right bottom,
+        rgba($color-blue-darken-1, .85), 
+        rgba($color-blue-darken-4, .85));
+    }
+
   }
 
   &__details {
@@ -112,5 +127,30 @@
         }
       }
     }
+  }
+
+  &__call-to-action {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  &__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: $color-white;
+  }
+
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 300;
   }
 }
