Implemented background video on the reviews section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'components/composition';
 @import 'components/feature-box';
 @import 'components/review';
+@import 'components/background-video';
 
 @import 'layout/grid';
 @import 'layout/header';
