--- a/css/style.css
+++ b/css/style.css
@@ -442,3 +442,17 @@ body {
 .section-reviews {
   padding: 15rem 0;
   position: relative; }
+
+.section-booking {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #8dcaff, #4c96d7); }
+
+.booking {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url(../img/nord-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  height: 50rem; }
+  .booking__form {
+    width: 50%;
+    padding: 6rem; }
