--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -31,3 +31,26 @@
   padding: 15rem 0;
   position: relative;
 }
+
+.section-booking {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, $color-light-blue, $color-dark-blue);
+}
+
+.booking {
+  background-image: linear-gradient(105deg, 
+                            rgba($color-white, .8) 0%,
+                            rgba($color-white, .8) 50%,
+                            transparent 50%),
+                            url(../img/nord-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+  height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
+}
