--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,8 +8,10 @@ $color-blue-darken-1: #9fa8da;
 $color-blue-darken-4: #0d47a1;
 $color-light-grey: #f7f7f7;
 $color-dark-grey: #777777;
+$color-dark-grey-2: #999999;
 $color-white: #ffffff;
 $color-black: #000000;
+$color-orange-darken-4: #e65100;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
