--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -10,6 +11,10 @@
     position: relative;
     font-size: $default-font-size;
 
+    // Change for the <button> element
+    border: none;
+    cursor: pointer;
+
     &:hover {
       transform: translateY(-3px);
       box-shadow: 0 1rem 2rem rgba($color-black, .3);
@@ -20,7 +25,9 @@
       }
     }
 
-    &:active {
+    &:active,
+    &:focus {
+      outline: none;
       transform: translateY(-1px);
       box-shadow: 0 .5rem 1rem rgba($color-black, 0.3);
     }
