--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $color-blue-darken-4: #0d47a1;
 $color-light-grey: #f7f7f7;
 $color-dark-grey: #777777;
 $color-dark-grey-2: #999999;
+$color-dark-grey-3: #333333;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-orange-darken-4: #e65100;
