--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-blue-darken-1: #9fa8da;
 $color-blue-darken-4: #0d47a1;
 $color-light-grey: #f7f7f7;
 $color-dark-grey: #777777;
+$color-light-grey-1: #eeeeee;
 $color-dark-grey-2: #999999;
 $color-dark-grey-3: #333333;
 $color-white: #ffffff;
