--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'components/review';
 @import 'components/background-video';
 @import 'components/form';
+@import 'components/modal';
 
 @import 'layout/grid';
 @import 'layout/header';
