--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+/*----------------------------------------------------------------
+
+0    -   600px    Phones
+600  -   900px    Tablet Portrait Mode
+900  -   1200px   Tablet Landscape Mode
+1200 -   1800px   Normal styles apply
+1800+ :  Big Desktop
+
+*/
+/*------------------------------
+
+- Phones
+- Tablets Porttrait Mode
+- Tablets Landscape mode
+- Big Desktops
+
+1em = 16px
+*/
 *,
 *::after,
 *::before {
@@ -7,6 +25,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
@@ -55,7 +82,7 @@ body {
     display: block;
     font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 1.5rem;
+    letter-spacing: .8rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out; }
@@ -63,7 +90,7 @@ body {
     display: block;
     font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 1.7rem;
+    letter-spacing: 1.3rem;
     animation: moveInRight 1s ease-out; }
 
 .secondary-title {
@@ -493,10 +520,8 @@ body {
     margin-bottom: 4rem;
     -moz-column-count: 2;
     -moz-column-gap: 4rem;
-    -moz-column-rule: 1px solid #eeeeee;
     column-count: 2;
     column-gap: 4rem;
-    column-rule: 1px solid #eeeeee;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
