--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,20 @@
 }
 
 html {
-  font-size: 62.5%;
+  // This defines what 1rem is
+  font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+
+  @include responsive(tablets-landscape-mode) { // Width < 1200?
+    font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
+  }
+
+  @include responsive(tablets-portrait-mode) { // Width < 900?
+    font-size: 50%; // 1rem = 8px, 8/16 = 50%
+  }
+
+  @include responsive(big-desktop) {
+    font-size: 75%; // 1rem = 12, 12/16 = 75%
+  }
 }
 
 body {
