--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,7 +16,7 @@ body {
     display: block;
     font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 1.5rem;
+    letter-spacing: .8rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
@@ -26,7 +26,7 @@ body {
     display: block;
     font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 1.7rem;
+    letter-spacing: 1.3rem;
     animation: moveInRight 1s ease-out;
   }
 }
