--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,4 +25,9 @@ html {
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include responsive(tablets-portrait-mode) {
+    padding: 0;
+  }
 }
