--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: $color-dark-grey;
-  padding: 3rem;
+
 }
 
 .main-title {
@@ -20,6 +20,11 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+
+    @include responsive(phones) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--subtitle {
@@ -28,6 +33,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.3rem;
     animation: moveInRight 1s ease-out;
+
+    @include responsive(phones) {
+      letter-spacing: .3;
+    }
   }
 }
 
@@ -41,6 +50,14 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all .2s;
+
+  @include responsive(tablets-portrait-mode) {
+    font-size: 3rem;
+  }
+
+  @include responsive(phones) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
