--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
   font-size: 1.4rem;
   color: $color-light-grey;
 
+  @include responsive(tablets-portrait-mode) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
@@ -18,6 +22,11 @@
     border-top: 1px solid $color-dark-grey;
     padding-top: 2rem;
     display: inline-block;
+
+  @include responsive(tablets-portrait-mode) {
+    width: 100%;
+    text-align: center;
+    }
   }
 
   &__list {
@@ -56,5 +65,10 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include responsive(tablets-portrait-mode) {
+      width: 80%;
+      float: none;
+    }
   }
 }
