--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,6 +11,10 @@
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include responsive(tablets-portrait-mode) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -67,7 +71,7 @@
     float: right;
 
     @include responsive(tablets-portrait-mode) {
-      width: 80%;
+      width: 100%;
       float: none;
     }
   }
