--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -9,6 +9,25 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include responsive(big-desktop) {
+    transform: skewX(-13deg); 
+  }
+
+  @include responsive(tablets-landscape-mode) {
+    transform: skewX(-13deg); 
+  }
+
+  @include responsive(tablets-portrait-mode) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+    transform: skewX(-13deg);  
+  }
+
+  @include responsive(phones) {
+    transform: skewX(0); 
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -19,6 +38,10 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+
+    @include responsive(phones) {
+      transform: translateX(-3rem) skewX(0); 
+    }
   }
 
   &__image {
@@ -30,6 +53,10 @@
 
   &__text {
     transform: skewX(12deg);
+
+    @include responsive(phones) {
+      transform: skewX(0); 
+    }
   }
 
   &__caption {
