--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -68,10 +68,32 @@
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
-  height: 50rem;
+  @include responsive(tablets-landscape-mode) {
+    background-image: linear-gradient(105deg, 
+                            rgba($color-white, .9) 0%,
+                            rgba($color-white, .9) 65%,
+                            transparent 65%),
+                            url(../img/nord-10.jpg);
+    background-size: cover;
+  }
+
+  @include responsive(tablets-portrait-mode) {
+        background-image: linear-gradient(to right, 
+                            rgba($color-white, .9) 0%,
+                            rgba($color-white, .9) 100%),
+                            url(../img/nord-10.jpg);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include responsive(tablets-landscape-mode) {
+      width: 65%;
+    }
+
+    @include responsive(tablets-portrait-mode) {
+      width: 100%;
+    }
   }
 }
