--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -58,16 +58,16 @@
 
     &--1 {
       background-image: linear-gradient(to right bottom, $color-blue-accent-1, $color-blue-accent-4),
-      url(../img/nord-5.jpg);
+      url(https://i.ibb.co/XWnvMMv/nord-5.jpg);
     }
 
     &--2 {
-      background-image: linear-gradient(to right bottom, $color-deep-purple-accent-1, $color-deep-purple-accent-4),url(../img/nord-6.jpg);
+      background-image: linear-gradient(to right bottom, $color-deep-purple-accent-1, $color-deep-purple-accent-4),url(https://i.ibb.co/T13pKNy/nord-6.jpg);
     }
 
     &--3 {
       background-image: linear-gradient(to right bottom, $color-blue-darken-1, $color-blue-darken-4),
-      url(../img/nord-7.jpg);
+      url(https://i.ibb.co/GPrb7b7/nord-7.jpg);
     }
   }
 
