--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
     to right bottom,
     rgba($color-light-blue, 0.8), 
     rgba($color-dark-blue, 0.8)), 
-  url(../img/nord-4.jpg);
+  url(https://i.ibb.co/HT3ShSs/nord-4.jpg);
   background-size: cover;
   background-position: center;
   transform: skewY(-7deg);
@@ -63,7 +63,7 @@
                             rgba($color-white, .9) 0%,
                             rgba($color-white, .9) 50%,
                             transparent 50%),
-                            url(../img/nord-10.jpg);
+                            url(https://i.ibb.co/9pFFVvm/nord-10.jpg);
   background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
@@ -73,7 +73,7 @@
                             rgba($color-white, .9) 0%,
                             rgba($color-white, .9) 65%,
                             transparent 65%),
-                            url(../img/nord-10.jpg);
+                            url(https://i.ibb.co/9pFFVvm/nord-10.jpg);
     background-size: cover;
   }
 
@@ -81,7 +81,7 @@
         background-image: linear-gradient(to right, 
                             rgba($color-white, .9) 0%,
                             rgba($color-white, .9) 100%),
-                            url(../img/nord-10.jpg);
+                            url(https://i.ibb.co/9pFFVvm/nord-10.jpg);
   }
 
   &__form {
