--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -37,15 +37,15 @@
 
 @mixin responsive($breakpoint) {
     @if $breakpoint == phones {
-        @media (max-width: 37.5em) { @content }; // 600px
+        @media  only screen and (max-width: 37.5em) { @content }; // 600px
     }
     @if $breakpoint == tablets-portrait-mode {   // 900px
-        @media (max-width: 56.25em) { @content };
+        @media only screen and (max-width: 56.25em) { @content };
     }
     @if $breakpoint == tablets-landscape-mode {  // 1200px
-        @media (max-width: 75em) { @content };
+        @media only screen and (max-width: 75em) { @content };
     }
     @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) { @content };  //1800px
+        @media only screen and (min-width: 112.5em) { @content };  //1800px
     }
 }
