--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,7 +34,7 @@
 
     &.btn--white {
       background-color: $color-white;
-      color: $color-dark-grey;
+      color: $color-dark-grey-3;
 
       &::after {
         background-color: $color-white;
@@ -44,6 +44,7 @@
     &.btn--blue {
       background-color: $color-dark-blue;
       color: $color-white;
+      font-weight: 700;
 
       &::after {
         background-color: $color-dark-blue;
