--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
     to right bottom,
     rgba($color-light-blue, 0.8), 
     rgba($color-dark-blue, 0.8)), 
-  url(https://i.ibb.co/sRQzB9v/main-hero-small.jpg);
+  url(https://i.ibb.co/RCCPF1B/main-hero-small.webp);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -12,7 +12,7 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-light-blue, 0.8), 
